--- a/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
+++ b/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
@@ -120,7 +120,7 @@
         if (selectChannelVal == '0')
             selectChannelVal = '@Model.Channels.FirstOrDefault().Value';
         $("#selectBox").dxSelectBox({
-            dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Channels)))'),
+            dataSource: @(Html.Raw(Json.Serialize(Model.Channels))),
             valueExpr: "value",
             displayExpr: "text",
             searchEnabled: true,
