--- a/src/Volvox.Helios.Web/Pages/_ViewImports.cshtml
+++ b/src/Volvox.Helios.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using Volvox.Helios.Web
 @using Volvox.Helios.Web.Models
+@namespace Volvox.Helios.Web.Pages
 @addTagHelper *, Volvox.Helios.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
