--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -122,3 +122,13 @@ hr{
 footer {
   background: var(--color-deep-dark);
 }
+
+
+
+/*Leaderboards*/
+.leaderboards .card:first-child .leader::before {
+  background-image: linear-gradient(to top left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, .2) 48%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 52%, rgba(255, 255, 255, 0) 57%, rgba(255, 255, 255, 0) 100%);
+}
+.leaderboards .points {
+  background: var(--color-deep-dark);
+}
