--- a/src/Volvox.Helios.Web/wwwroot/css/site.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/site.css
@@ -541,7 +541,6 @@ input:checked + .slider {
     height: 100%;
   }
 
-
 /*******Cookie consent*****/
 #cookieConsent {
   border-top: 3px solid var(--color-skyblue);
@@ -566,5 +565,69 @@ input:checked + .slider {
   #HW_frame_cont {
     width: calc(100% - 20px) !important;
     margin: 0 10px;
+  }
+}
+
+
+.leaderboards .card:first-child .leader::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: 1200px 1200px, 100% 100%;
+  background-position: -700px -700px, center;
+  border-radius: .25rem;
+  animation: sliding 5s infinite linear forwards;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 100;
+}
+
+.leaderboards .trophy {
+  right: -10px;
+  top: -10px;
+  transform: rotate(30deg);
+  z-index: 10;
+}
+.leaderboards .rank {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  border-radius: .25rem 0 0 .25rem;
+}
+
+.leaderboards .user-icon {
+  width: 24px;
+  height: 24px;
+  margin-top: -7px;
+}
+
+.leaderboards .points {
+  right: 0;
+  font-weight: bold;
+  padding: .5rem 15px;
+  font-size: 14px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.leaderboards .points::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 1px;
+  background: var(--color-volvox);
+}
+
+@keyframes sliding{
+  50% {
+    background-position: 300px 300px, center;
+  }
+  100% {
+    background-position: 300px 300px, center;
   }
 }
