--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -64,6 +64,9 @@ hr{
   background-color: var(--color-deep-dark);
   color: var(--color-gray);
 }
+.dx-datagrid .dx-toolbar{
+  background: none;
+}
 .dx-datagrid-headers {
   border-bottom: inherit;
 }
@@ -126,7 +129,7 @@ footer {
 
 
 /*Leaderboards*/
-.leaderboards .card:first-child .leader::before {
+.leaderboards .card .leader::before {
   background-image: linear-gradient(to top left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, .2) 48%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 52%, rgba(255, 255, 255, 0) 57%, rgba(255, 255, 255, 0) 100%);
 }
 .leaderboards .points {
