added minwidth to gridlayout

--- a/src/Volvox.Helios.Web/Pages/Leveling/Leaderboards.cshtml
+++ b/src/Volvox.Helios.Web/Pages/Leveling/Leaderboards.cshtml
@@ -154,16 +154,19 @@
             columns: [
                 {
                     dataField: "ranking",
-                    width: 100
+                    minWidth: 100
                 },
                 {
                     dataField: "name",
+                    minWidth: 250
                 },
                 {
                     dataField: "points",
+                    minWidth: 100
                 },
                 {
                     dataField: "level",
+                    minWidth: 100
                 }
             ]
         });
