added user details page

--- a/src/Volvox.Helios.Web/Views/Settings/LevelingSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/LevelingSettings.cshtml
@@ -53,7 +53,7 @@
             <a class="btn btn-block btn-volvox-outline" asp-controller="Leveling" asp-action="Leaderboards">Leaderboards</a>
         </div>
         <div class="col-md-3 mt-md-0 mt-3">
-            <a class="btn btn-block btn-volvox-outline">Some other thing</a>
+            <a class="btn btn-block btn-volvox-outline" asp-controller="Leveling" asp-action="Details">User details</a>
         </div>
         <div class="col-md-3 mt-md-0 mt-3">
             <a class="btn btn-block btn-volvox-outline">Lorem ipsum</a>
