--- a/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
@@ -62,7 +62,7 @@
             selectChannelVal = '@Model.Channels.FirstOrDefault().Value';
         
         $("#channelSelect").dxSelectBox({
-            dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Channels)))'),
+            dataSource: @(Html.Raw(Json.Serialize(Model.Channels))),
             valueExpr: "value",
             displayExpr: "text",
             value: selectChannelVal,
