--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -74,6 +74,10 @@
         <p>
             Unleash the "dad" on your server. Messages that start with "I'm" will be met with a dad-like response.
         </p>
+        <h4 class="text-volvox underline-left mt-4">Clean Chat Module</h4>
+        <p>
+            Clean Chat is a new Module that will allow you to select channels and add a message duration to them. Once a user sends a message it will be automatically deleted after the set duration. This module is great for a Looking For Group channel. You can even set the duration to zero to lock channels.
+        </p>
     </div>
 
 </div>
