added clean chat information fixed bootstrap buttons

--- a/src/Volvox.Helios.Web/Views/Settings/CleanChatSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/CleanChatSettings.cshtml
@@ -7,6 +7,24 @@
 <hr>
 
 <form method="post" class="col-12">
+    <div class="row border border-gray2 rounded sliding-border">
+        <div class="col-md-9 col-10 pt-3 pb-3">
+            <h4 class="mb-0">Information and Instructions</h4>
+        </div>
+        <div class="col-md-3 col-2 valign">
+            <div class="btn-group material-btn-group ml-auto">
+                <a href="#infoCollapse" class="info-btn" data-toggle="collapse" data-animation="sliding-border" role="button" aria-expanded="false" aria-controls="infoCollapse">
+                    <i class="fas fa-info-circle"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-12 collapse" id="infoCollapse">
+            <p>
+                Clean Chat is a new Module that will allow you to select channels and add a message duration to them. Once a user sends a message it will be automatically deleted after the set duration. This module is great for a Looking For Group channel. You can even set the duration to zero to lock channels.
+            </p>
+        </div>
+    </div>
+
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="row border border-gray2 rounded">
@@ -34,7 +52,7 @@
         <div class="col-12 pt-3 pb-3">
             <h4>Channels</h4>
             <p class="mb-0 text-volvox">
-                Select the channel where this module should be enabled.
+                Select the channels where this module should be enabled.
             </p>
             <hr />
             <select asp-for="CleanChatChannels" class="d-none channel-items" multiple></select>
