fixed light theme layout added donation link

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                     <a href="https://discord.gg/jReSmc3" class="d-inline-flex footer-icon valign" target="_blank">
                         <i class="fab fa-discord"></i>
                     </a>
-                    <a href="#" class="d-inline-flex footer-icon valign" target="_blank">
+                    <a href="https://paypal.me/billchirico" class="d-inline-flex footer-icon valign" target="_blank">
                         <i class="fas fa-hand-holding-usd"></i>
                     </a>
                 </div>
