use volvox color

--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -128,9 +128,9 @@ footer {
 }
 
 .volvox-link {
-  color: #7b8187;
+  color: #4cae4c;
 }
 
 .volvox-link:hover {
-  color: #888888;
+  color: #89f489;
 }
