--- a/src/Volvox.Helios.Web/Views/Home/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <header class="home-header valign mb-4">
     <div class="container">
         <div class="col-md-6 image-shadow">
-            <img src="https://volvox.tech/images/large/volvox-combination-mark.png" alt="Volvox logo" class="img-fluid" />
+            <img src="/images/large/volvox-combination-mark.png" alt="Volvox logo" class="img-fluid" />
         </div>
     </div>
 </header>
